<resources>
    <string name="app_name">LoginPage</string>
    <string name="button">Log In</string>
    <string name="hintemail">Enter Your Email</string>
    <string name="hintpass">Enter Your Password</string>
    <string name="headtitleloginpage">headtitleloginpage</string>
    <string name="cekstok">cekstok</string>
    <string name="laporan">laporan</string>
    <string name="edit">edit</string>
    <string name="penjualan">penjualan</string>
</resources>