<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="88dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="612dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/headerTitle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:contentDescription="@string/headtitleloginpage"
            app:srcCompat="@drawable/logo_agloseries" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="204dp"
        android:layout_height="609dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/cekstockButton"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:contentDescription="@string/cekstok"
            app:srcCompat="?attr/actionModePasteDrawable" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:contentDescription="@string/penjualan"
            app:srcCompat="@android:drawable/ic_dialog_dialer" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="204dp"
        android:layout_height="609dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:contentDescription="@string/edit"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:contentDescription="@string/laporan"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>