<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="302dp"
        android:layout_height="54dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="81dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="316dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="140dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="302dp"
        android:layout_height="54dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="81dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintpass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="224dp"
        android:layout_height="374dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/headtitleloginpage"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_agloseries" />

</androidx.constraintlayout.widget.ConstraintLayout>